Social share fix on iPhone.

--- a/src/core/assets/_components/includes/content/_options.scss
+++ b/src/core/assets/_components/includes/content/_options.scss
@@ -34,7 +34,7 @@
         font-size: 1.2em;     
     }
 
-    #shareDropdown + .dropdown-menu{
+    #qg-share-menu-secondary {
         background: #575d62;
     }
 
